--- a/appointa/index.html
+++ b/appointa/index.html
@@ -69,7 +69,8 @@
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
-
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
@@ -208,7 +209,7 @@
   <div class="Grid Grid--gutters Grid--cols-2 wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInner">
+        <div class="elementInnerL">
 
           <h3><strong>Opportunity</strong></h3>
           <h4>The recruiter's primary focus is on finding qualified candidates for the open position
@@ -221,7 +222,7 @@
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInner">
+        <div class="elementInnerL">
 
           <h3><strong>Solution</strong></h3>
           <h4> Provide a simple and straightforward way for recruiters to quickly and easily
@@ -236,7 +237,7 @@
   <div class="Grid Grid--gutters Grid--cols-4 wrapper">
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInner">
+        <div class="elementInnerL">
 
           <h3><strong>Duration</strong></h3>
           <h4>June - August 2022 </h4>
@@ -247,7 +248,7 @@
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInner">
+        <div class="elementInnerL">
 
           <h3><strong>Team</strong></h3>
           <h4>Concept </h4>
@@ -257,7 +258,7 @@
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInner">
+        <div class="elementInnerL">
 
           <h3><strong>Role</strong></h3>
           <h4>Product strategy</h4>
@@ -270,7 +271,7 @@
     </div>
     <div class="Grid-cell">
       <div class="element">
-        <div class="elementInner">
+        <div class="elementInnerL">
 
           <h3><strong>Tool</strong></h3>
           <h4>Figma</h4>
@@ -440,7 +441,7 @@
         <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
           <div class="Grid-cell BGappointa">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Research</strong></h4>
                 <h5>&#8226; The problem space </h5>
@@ -451,7 +452,7 @@
           </div>
           <div class="Grid-cell BGappointa">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Framing</strong></h4>
                 <h5>&#8226; The problem(s) to be solved </h5>
@@ -463,7 +464,7 @@
 
           <div class="Grid-cell BGappointa">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Gathering</strong></h4>
                 <h5>&#8226; Enough evidence </h5>
@@ -499,7 +500,7 @@
               <div class="element">
                 <div class="element">
 
-                  <p class="specialText colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63;
+                  <p class="specialTextL colorAPPOINTALt">What&#63; &nbsp; When&#63; &nbsp; Why&#63;
                     &nbsp; How&#63; &nbsp; </p>
                 </div>
               </div>
@@ -514,7 +515,7 @@
               <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightS">
+                    <div class="elementInnerL cardAPPOINTA heightS">
                       <img class="iconM" src="iconSearch.svg" alt="search">
 
                       <div class="blankHXS"></div>
@@ -529,7 +530,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightS">
+                    <div class="elementInnerL cardAPPOINTA heightS">
                       <img class="iconM" src="iconSearch.svg" alt="search">
 
                       <div class="blankHXS"></div>
@@ -549,7 +550,7 @@
               <div class="Grid Grid--gutters Grid--cols-2">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightS">
+                    <div class="elementInnerL cardAPPOINTA heightS">
                       <img class="iconM" src="iconSearch.svg" alt="search">
 
                       <div class="blankHXS"></div>
@@ -569,7 +570,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightS">
+                    <div class="elementInnerL cardAPPOINTA heightS">
                       <img class="iconM" src="iconSearch.svg" alt="search">
 
                       <div class="blankHXS"></div>
@@ -592,7 +593,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
-                    <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Discover the
+                    <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Discover the
                       opportunity to improve the interview scheduling experience for recruiting team
                     </p>
 
@@ -619,14 +620,14 @@
             </div>
           </div>
           <!-- Arrow -->
-          <div class="blankHS"></div>
+          <div class="blankHXS"></div>
 
           <!-- key pain points -->
           <div class="wrapper">
             <div class="Grid Grid--gutters Grid--cols-3">
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="elementInner cardAPPOINTA heightM">
+                  <div class="elementInnerL cardAPPOINTA heightM">
                     <img class="iconM" src="IconCalendarSearch.svg" alt="se-arrow">
                     <div class="blankHXS"></div>
                     <h4> <strong> Find availabilities</strong> </h4>
@@ -641,7 +642,7 @@
 
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="elementInner cardAPPOINTA heightM">
+                  <div class="elementInnerL cardAPPOINTA heightM">
                     <img class="iconM" src="IconCalendar.svg" alt="se-arrow">
 
                     <div class="blankHXS"></div>
@@ -656,7 +657,7 @@
               </div>
               <div class="Grid-cell">
                 <div class="element">
-                  <div class="elementInner cardAPPOINTA heightM">
+                  <div class="elementInnerL cardAPPOINTA heightM">
                     <img class="iconM" src="IconCollaboration.svg" alt="se-arrow">
 
                     <div class="blankHXS"></div>
@@ -982,7 +983,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning the availability of both candidates and hiring managers
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The most significant hurdle is aligning the availability of both candidates and hiring managers
                   </p>
 
                 </div>
@@ -1006,7 +1007,7 @@
         <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
           <div class="Grid-cell BGappointaColor">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Capture</strong></h4>
                 <h5>&#8226; The user needs </h5>
@@ -1017,7 +1018,7 @@
           </div>
           <div class="Grid-cell BGappointaColor">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Align</strong></h4>
                 <h5>&#8226; a concise goal </h5>
@@ -1029,7 +1030,7 @@
 
           <div class="Grid-cell BGappointaColor">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Identify</strong></h4>
                 <h5>&#8226; metrics for success </h5>
@@ -1127,7 +1128,7 @@
               <div class="Grid Grid--gutters Grid--cols-3 ">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightM">
+                    <div class="elementInnerL cardAPPOINTA heightM">
                       <img class="iconM" src="IconFolder.svg" alt="se-arrow">
                       <div class="blankHXS"></div>
                       <h4> <strong> Efficiency</strong> </h4>
@@ -1141,7 +1142,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightM">
+                    <div class="elementInnerL cardAPPOINTA heightM">
                       <img class="iconM" src="iconShare.svg" alt="se-arrow">
 
                       <div class="blankHXS"></div>
@@ -1159,7 +1160,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightM">
+                    <div class="elementInnerL cardAPPOINTA heightM">
                       <img class="iconM" src="IconCategory.svg" alt="se-arrow">
 
                       <div class="blankHXS"></div>
@@ -1176,7 +1177,7 @@
               <div class="Grid Grid--gutters Grid--cols-3 ">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightM">
+                    <div class="elementInnerL cardAPPOINTA heightM">
                       <img class="iconM" src="iconClock.svg" alt="se-arrow">
                       <div class="blankHXS"></div>
                       <h4> <strong> Time-saving</strong> </h4>
@@ -1190,7 +1191,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightM">
+                    <div class="elementInnerL cardAPPOINTA heightM">
                       <img class="iconM" src="IconDocument.svg" alt="se-arrow">
 
                       <div class="blankHXS"></div>
@@ -1206,7 +1207,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardAPPOINTA heightM">
+                    <div class="elementInnerL cardAPPOINTA heightM">
                       <img class="iconM" src="iconNotification.svg" alt="se-arrow">
                       <div class="blankHXS"></div>
 
@@ -1242,7 +1243,7 @@
         <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
           <div class="Grid-cell BGappointaColor">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Ideate</strong></h4>
                 <h5>&#8226; Brainstorm solutions </h5>
@@ -1253,7 +1254,7 @@
           </div>
           <div class="Grid-cell BGappointaColor">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Generate</strong></h4>
                 <h5>&#8226; Key flow charts </h5>
@@ -1265,7 +1266,7 @@
 
           <div class="Grid-cell BGappointaColor">
             <div class="element">
-              <div class="elementInner">
+              <div class="elementInnerL">
 
                 <h4><strong>Test</strong></h4>
                 <h5>&#8226; Test with potential users </h5>
@@ -1298,7 +1299,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">How might we provide a
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">How might we provide a
                     better scheduling experience for the recruiting team and candidates&#63;</p>
                 </div>
               </div>
@@ -1376,7 +1377,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">A recruiter needs to be
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">A recruiter needs to be
                     able to quickly and easily schedule an interview with a potential candidate. The
                     process should be simple and streamlined, so that the recruiter can focus on
                     finding the best candidates for the job.
@@ -1413,7 +1414,7 @@
 
                     <div class="Grid-cell">
                       <div class="element">
-                        <div class="elementInner cardAPPOINTA heightM">
+                        <div class="elementInnerL cardAPPOINTA heightM">
                           <img class="iconM" src="ppl_recruiter.png" alt="Hiring managers, HR, Recruiters">
 
                           <div class="blankHXS"></div>
@@ -1429,7 +1430,7 @@
                     </div>
                     <div class="Grid-cell">
                       <div class="element">
-                        <div class="elementInner cardAPPOINTA heightM">
+                        <div class="elementInnerL cardAPPOINTA heightM">
                           <img class="iconM" src="ppl_teammember.png" alt="Team members">
 
                           <div class="blankHXS"></div>
@@ -1444,7 +1445,7 @@
                     </div>
                     <div class="Grid-cell">
                       <div class="element">
-                        <div class="elementInner cardAPPOINTA heightM">
+                        <div class="elementInnerL cardAPPOINTA heightM">
                           <img class="iconM" src="ppl_candidate.png" alt="Team members">
                           <div class="blankHXS"></div>
                           <h5> <strong> Candidates</strong> </h5>
@@ -1579,7 +1580,7 @@
           <div class="Grid-cell">
             <div class="element">
               <div class="element">
-                <p class="specialTextHR colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange the key steps in order and pair candidates with interviewers who have both the necessary availability and relevant skill set.</p>
+                <p class="specialTextNote colorAPPOINTAYellow u-textCenter">The goal of the lo-fi sketch is to arrange the key steps in order and pair candidates with interviewers who have both the necessary availability and relevant skill set.</p>
               </div>
             </div>
           </div>
@@ -1734,7 +1735,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Test
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Test
                     wireframes can be a helpful tool for evaluating the user experience of a
                     proposed design.</p>
                 </div>
@@ -1845,7 +1846,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details..</p>
+                  <p class="specialTextNote colorAPPOINTAYellow u-textCenter">Continue focus on the flow and navigation. enhance wireframes with additional details..</p>
                 </div>
               </div>
             </div>
@@ -1871,7 +1872,7 @@
           <div class="Grid Grid--gutters Grid--cols-3 Grid--center wrapper">
             <div class="Grid-cell BGappointa">
               <div class="element">
-                <div class="elementInner">
+                <div class="elementInnerL">
 
                   <h4><strong>Enhance</strong></h4>
                   <h5>&#8226; Mockup and Prototype </h5>
@@ -1882,7 +1883,7 @@
             </div>
             <div class="Grid-cell BGappointa">
               <div class="element">
-                <div class="elementInner">
+                <div class="elementInnerL">
 
                   <h4><strong>Test</strong></h4>
                   <h5>&#8226; Key flow charts </h5>
@@ -1894,7 +1895,7 @@
 
             <div class="Grid-cell BGappointa">
               <div class="element">
-                <div class="elementInner">
+                <div class="elementInnerL">
 
                   <h4><strong>Document</strong></h4>
                   <h5>&#8226; Design system </h5>
@@ -2153,7 +2154,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
-                    <p class="specialTextHR colorAPPOINTAYellow u-textCenter">A design system helps
+                    <p class="specialTextNote colorAPPOINTAYellow u-textCenter">A design system helps
                       to
                       ensure that all UI elements are consistent in terms of style, color, and
                       layout.
@@ -2203,9 +2204,7 @@
             <div class="element">
               <div class="element colorAPPOINTABgBlue leftVerLine APPOINTA">
                 <h4>
-                  <p class="colorAPPOINTALt specialTextXS">While this product is just a concept,
-                    there
-                    are still takeaways!</p>
+
 
 
                   <p> <strong>What went well so far&#58;</strong></p>
