--- a/design_system/index.html
+++ b/design_system/index.html
@@ -2,6 +2,7 @@
 
 
 <head>
+  
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -68,7 +69,8 @@
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
   <!--handwriting font-family: 'Indie Flower'; -->
-
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
@@ -343,11 +345,14 @@
     <div class="Grid Grid--full">
       <div class="Grid-cell">
         <div class="element">
-          <h3>Font family</h3>
-          <h3>Lato</h3>
+          <h3>Font family&#58; Lato</h3>
         </div>
         <div class="element">
           <h3>Font size &#38; Weight &#38; Color</h3>
+
+          <p class="specialTextL">Display 1, Lorem ipsum dolor sit amet</p>
+          <p class="specialTextS">Display 2, Lorem ipsum dolor sit amet</p>
+          <div class="blankHXS"></div>
 
           <h4>Heading</h4>
           <h1>h1 font-weight: 500, margin: top &#38; button 0.75em, Lorem ipsum dolor sit amet</h1>
@@ -365,21 +370,22 @@
           <div class="blankHXS"></div>
           <h4>Body</h4>
 
-          <p>Paragraph, defult Lorem ipsum dolor sit amet</p>
-          <p class="thick">Paragraph, Lorem ipsum dolor sit amet</p>
-          <p class="normal">Paragraph, Lorem ipsum dolor sit amet</p>
-          <p class="light">Paragraph, Lorem ipsum dolor sit amet</p>
+          <p class="thick">Paragraph, thick, Lorem ipsum dolor sit amet</p>
+          <p class="default">Paragraph, normal, Lorem ipsum dolor sit amet</p>
+          <p class="light">Paragraph, light, Lorem ipsum dolor sit amet</p>
 
-          <div class="blankHM"></div>
+          <div class="blankHXS"></div>
+          <h4>Others</h4>
           <strong>
-            <h3>Bold, Lorem ipsum dolor sit amet</h3>
-            <h3 class="allCaps">Bold &#38; Uppercase, Lorem ipsum dolor sit amet</h3>
+            <h3>Bold, font weight 500, Lorem ipsum dolor sit amet</h3>
           </strong>
+          <h3 class="allCaps">Uppercase, Lorem ipsum dolor sit amet</h3>
+          <p class="tArrow">Label, Lorem ipsum dolor sit amet</p>
+          <p class="specialTextNote">Note, Lorem ipsum dolor sit amet</p>
+          <div class="t-hello">hello, I'm Vicky. </div>
 
-          <p class="tArrow">specialText, Lorem ipsum dolor sit amet</p>
-          <p class="specialTextHR">specialText, Lorem ipsum dolor sit amet</p>
 
-          <h3><a href="" class="textUnderline colorGrey">text decoration</a></h3>
+          <h3 class="textUnderline colorGrey">text decoration</h3>
           <h3 class="textDecor">text decoration</h3>
         </div>
       </div>
@@ -884,10 +890,9 @@
     <div class="Grid Grid--full wrapper">
       <div class="Grid-cell">
         <div class="element">
-          <div class=" element colorBgGrey leftVerLine ">
+          <div class="element colorBgGrey leftVerLine ">
             <h4>
-
-              <p> <strong>Title h4</strong></p>
+              <p> <strong>Title </strong></p>
               <ul>
                 <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                   et dolore magna aliqua. </li>
@@ -896,7 +901,7 @@
                   nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
                   mollit anim id est laborum.</li>
               </ul>
-              <p> <strong>Title h4</strong></p>
+              <p> <strong>Title </strong></p>
               <ul>
                 <li> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
                   consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
@@ -916,7 +921,7 @@
     <div class="Grid-cell">
       <div class="element">
         <div class="element">
-          <p class="specialTextHR colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+          <p class="specialTextNote colorGrey u-textCenter">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
             do eiusmod tempor incididunt ut labore et dolore magna aliqua.
           </p>
 
@@ -940,8 +945,8 @@
     <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardAPPOINTA">
-            <h4> <strong> Card title</strong> </h4>
+          <div class="elementInnerL cardAPPOINTA">
+            <h4> <strong> Title</strong> </h4>
             <ul>
               <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et
@@ -955,8 +960,42 @@
       </div>
       <div class="Grid-cell">
         <div class="element">
-          <div class="elementInner cardAPPOINTA">
-            <h4> <strong> Card title</strong> </h4>
+          <div class="elementInnerL cardAPPOINTA">
+            <h4> <strong> Title</strong> </h4>
+            <ul>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. </li>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et
+                dolore magna aliqua. </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="blankHXS"></div>
+    <div class="element">
+      <h3>Type 2</h3>
+    </div>
+    <div class="Grid Grid--gutters Grid--cols-2">
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardBorder">
+            <h4> <strong> Title</strong> </h4>
+            <ul>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </li>
+              <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
+                et dolore magna aliqua. </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementInner cardBorder">
+            <h4> <strong> Title</strong> </h4>
             <ul>
               <li> Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore
                 et
@@ -972,14 +1011,13 @@
     <div class="blankHS"></div>
 
     <div class="element">
-      <h3>Type 2</h3>
+      <h3>Type 3</h3>
     </div>
     <div class="Grid Grid--gutters Grid--cols-3">
       <div class="Grid-cell">
         <div class="element">
           <div class="elementDemoCard">
             <div class="elementInnerDemoCard heightS">
-              <div class="blankHXS"></div>
               <h4> <strong> Title </strong> </h4>
               <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
@@ -991,7 +1029,6 @@
         <div class="element">
           <div class="elementDemoCard">
             <div class="elementInnerDemoCard heightS">
-              <div class="blankHXS"></div>
               <h4> <strong> Title </strong> </h4>
               <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
@@ -1003,7 +1040,6 @@
         <div class="element">
           <div class="elementDemoCard">
             <div class="elementInnerDemoCard heightS">
-              <div class="blankHXS"></div>
               <h4> <strong> Title </strong> </h4>
               <h5>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
                 dolore magna aliqua. Velit euismod in pellentesque massa placerat duis ultricies. </h5>
@@ -1018,7 +1054,7 @@
   <div class="blankHM"></div>
   <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h5 class="element ">For more information please visit my website </h5>
+      <h5 class="element ">For more information please visit my website&#33;</h5>
       <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
