--- a/photography/index.html
+++ b/photography/index.html
@@ -62,8 +62,7 @@
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Catamaran', sans-serif; -->
   <link
@@ -74,22 +73,19 @@
     href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <!-- handwriting - shadows into light-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
   <!--handwriting - font-family: La Belle Aurore; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat'; -->
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -103,8 +99,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
 
 
@@ -137,11 +132,10 @@
   <!-- header -->
   <nav class="header" id="header">
     <div class="backgroundColorNav">
-      <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
+        <a href="http://vickywang.me/" class="logo pointer SiteWide">VW</a>
       <div class="navbar">
         <ul class="nav-menu">
-          <li class="nav-item inactive greenNav marginZero"><a href="/"
-              class="nav-link box">PROJECT</a>
+          <li class="nav-item inactive greenNav marginZero"><a href="/" class="nav-link box">PROJECT</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/architecture"
               class="nav-link box font300-1080 ">ARCHITECTURE</a>
@@ -149,8 +143,7 @@
           <li class="nav-item active marginZero"><a href="/photography"
               class="nav-link box font300-1080">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about"
-              class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -167,26 +160,28 @@
 
   <div class="blankHM"></div>
   <!--intro-->
-  <div class="wrapper element">
-    <div class="intro">
-      <div class="t-hello">hi there! </div>
-    </div>
-    <div class="intro" data-aos="fade-up">
-      <strong>
-        <div class="intro">
-          <h1> Photography &nbsp;</h1>
-          <span class="divider1"></span>
-          <h1> Selected photographs </h1>
+  <div class="wrapper">
+    <div class="element">
+
+      <div class="intro">
+        <div class="t-hello">hi there! </div>
+      </div>
+      <div class="intro" data-aos="fade-up">
+        <strong>
+          <div class="intro">
+            <h1> Photography &nbsp;</h1>
+            <span class="divider1"></span>
+            <h1> Selected photographs </h1>
+          </div>
+        </strong>
+      </div>
+      <div class="Grid Grid--full">
+        <div class="Grid-cell colorGrey">
+          <h3>observing the narrative of natural components within a certain perspective</h3>
+          <h3>love to recompose the nature with my camera</h3>
         </div>
-      </strong>
-    </div>
-    <div class="Grid Grid--full">
-      <div class="Grid-cell colorGrey">
-        <h3>observing the narrative of natural components within a certain perspective</h3>
-        <h3>love to recompose the nature with my camera</h3>
       </div>
     </div>
-
 
   </div>
   <!--intro-->
@@ -598,16 +593,14 @@
   </div>
   <!--photos-->
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
-
-  <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+  <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h4 data-aos="fade-up">Thank You for Visiting! </h4>
-      <h5>More photos coming soon</h5>
+      <h4 data-aos="fade-up">Thanks for stopping by&#33; I'll be sharing more photos soon&#33;</h4>
+      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
-  <div class="blankHM"></div>
+  <div class="blankHL"></div>
+
   <!--back to top-->
   <button id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="../icon/arrow-top.svg" alt="back to top">
