--- a/seer/index.html
+++ b/seer/index.html
@@ -59,8 +59,7 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Train+One&display=swap" rel="stylesheet">
   <!--font using hello-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--font     font-family: 'Catamaran', sans-serif; -->
   <link
@@ -68,8 +67,7 @@
     rel="stylesheet">
   <!--font font-family: 'Lato', sans-serif; -->
 
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -77,7 +75,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
 
   <!--font font-family: 'Indie Flower'; -->
-
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
   <link href="https://fonts.cdnfonts.com/css/jua" rel="stylesheet">
   <!--font Jua -->
 
@@ -89,8 +88,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -148,10 +146,9 @@
               </a>
             </div>
           </li>
-          
-          
-          <li class="nav-item inactive marginZero"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
+
+
+          <li class="nav-item inactive marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
           </li>
@@ -640,7 +637,7 @@
               <div class="Grid-cell">
                 <div class="element">
                   <div class="element">
-                    <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Understanding the
+                    <p class="specialTextNote colorSEEROrange u-textCenter">&#8220; Understanding the
                       problem and opportunities for businesses search and track customer sentiment
                       on
                       Reddit &#8221;
@@ -734,7 +731,7 @@
               <div class="Grid Grid--gutters Grid--cols-3">
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightM">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
                       <div class="blankHXS"></div>
                       <h4> <strong> Find data</strong> </h4>
@@ -747,7 +744,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightM">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
 
                       <div class="blankHXS"></div>
@@ -762,7 +759,7 @@
                 </div>
                 <div class="Grid-cell">
                   <div class="element">
-                    <div class="elementInner cardSEER heightM">
+                    <div class="elementInnerL cardSEER heightM">
                       <img class="iconM" src="icon_DataBG.svg" alt="icon">
 
                       <div class="blankHXS"></div>
@@ -941,21 +938,21 @@
       <div class="blankHXS"></div>
 
       <section id="ideation">
+        <div class="BGseer1_1">
 
-        <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
-          <div class="Grid-cell">
-            <h1 class="Grid Grid--center"> <span>Ideation</span><img class="moveUpDown widthLogo"
-                src="../icon/icon_Redesign.svg" alt="Redesign">
-            </h1>
-            <h3 class="colorSEER">Define the key concept and test</h3>
+          <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+            <div class="Grid-cell">
+              <h1 class="Grid Grid--center"> <span>Ideation</span><img class="moveUpDown widthLogo"
+                  src="../icon/icon_Redesign.svg" alt="Redesign">
+              </h1>
+              <h3 class="colorSEER">Define the key concept and test</h3>
 
+            </div>
           </div>
-        </div>
-        <section id="InitiaConcepts">
+          <section id="InitiaConcepts">
 
-          <!-- Arrow -->
+            <!-- Arrow -->
 
-          <div class="BGseer1_1">
             <div class="blankHS"></div>
 
             <div class="wrapper">
@@ -1081,10 +1078,11 @@
             <!-- Product / Features -->
             <div class="blankHM"></div>
 
-          </div>
-        </section>
-        <section id="howitworks">
-          <div class="BGseer2">
+          </section>
+        </div>
+        <div class="BGseer2">
+
+          <section id="howitworks">
             <div class="wrapper">
               <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
                 <div class="Grid-cell">
@@ -1177,14 +1175,11 @@
               </div>
             </div>
             <div class="blankHS"></div>
-          </div>
-        </section>
-
+          </section>
+        </div>
         <section id="V1">
-
           <!-- Arrow -->
           <div class="BGseer1_1">
-
             <div class="wrapper">
               <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
                 <div class="Grid-cell">
@@ -1350,13 +1345,12 @@
                   <p><strong>By thinking one step deeper about charts</strong>
                   </p>
                   <p> the <strong class="textDecor SEER">post count</strong>,
-                    <strong class="textDecor SEER">upvote ratio</strong>, and <strong
-                      class="textDecor SEER">sentiment score</strong> are the most significant data
+                    <strong class="textDecor SEER">upvote ratio</strong>, and <strong class="textDecor SEER">sentiment
+                      score</strong> are the most significant data
                     for
                     the keywords
                   </p>
-                  <p> step two, go to the dashboard to select the <strong
-                      class="textDecor SEER">time
+                  <p> step two, go to the dashboard to select the <strong class="textDecor SEER">time
                       range</strong> </p>
                   <p> So I decide to use the <strong class="textDecor SEER">line chart</strong> to
                     show
@@ -1408,7 +1402,7 @@
             <div class="Grid-cell">
               <div class="element">
                 <div class="element">
-                  <p class="specialTextHR colorSEEROrange u-textCenter">&#8220; Structuring the
+                  <p class="specialTextNote colorSEEROrange u-textCenter">&#8220; Structuring the
                     experience &#8221;
                   </p>
 
@@ -1428,10 +1422,8 @@
                   <p> Users should be able to <strong class="textDecor SEER">add and delete</strong>
                     the <strong class="textDecor SEER">keywords</strong></p>
 
-                  <p> Users should be able to see how popular the <strong
-                      class="textDecor SEER">keywords</strong> in
-                    Reddit posts were and what was the <strong
-                      class="textDecor SEER">sentiment</strong>
+                  <p> Users should be able to see how popular the <strong class="textDecor SEER">keywords</strong> in
+                    Reddit posts were and what was the <strong class="textDecor SEER">sentiment</strong>
                     behind them. </p>
 
                   <p> Users should be able to <strong class="textDecor SEER">filter data</strong> by
@@ -1474,8 +1466,8 @@
         <section id="solution">
           <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
             <div class="Grid-cell">
-              <h1 class="Grid Grid--center"> <span>Final solution</span><img
-                  class="moveUpDown widthLogo" src="../icon/icon_Redesign.svg" alt="Redesign">
+              <h1 class="Grid Grid--center"> <span>Final solution</span><img class="moveUpDown widthLogo"
+                  src="../icon/icon_Redesign.svg" alt="Redesign">
               </h1>
             </div>
           </div>
