--- a/about/index.html
+++ b/about/index.html
@@ -37,8 +37,7 @@
 
   <meta property="og:locale" content="en_US">
   <meta property="og:type" content="website">
-  <meta property='og:title'
-    content="Vicky Wang is a product designer specializing in UI/UX design" />
+  <meta property='og:title' content="Vicky Wang is a product designer specializing in UI/UX design" />
   <meta property='og:description'
     content='Hi! Thanks for stopping by. I am a UI/UX designer who loves solving challenging problems. Interested in what you see? Shoot me an email :)' />
   <meta property='og:url' content="https://vickywang.me/" />
@@ -49,8 +48,7 @@
 
 
 
-  <meta property='og:image'
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta property='og:image' content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="627">
   <meta property="og:image:type" content="image/jpeg">
@@ -60,8 +58,7 @@
   <meta name="twitter:title" content="Vicky Wang's Website" />
   <meta name="twitter:description"
     content="Hi! Thanks for stopping by. I enjoy design and code who loves solving challenging problems. Interested in what you see? Shoot me an email :)" />
-  <meta name="twitter:image"
-    content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
+  <meta name="twitter:image" content="https://s3.us-west-1.amazonaws.com/vickywang.me/thumbnail.jpg" />
   <meta name="twitter:url" content="//vickywang.me/">
   <meta name="twitter:creator" content="VICKY WANG" />
   <!-- twitter -->
@@ -87,8 +84,7 @@
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Catamaran', sans-serif; -->
   <link
@@ -99,22 +95,19 @@
     href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <!-- handwriting - shadows into light-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
   <!--handwriting - font-family: La Belle Aurore; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat'; -->
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -126,21 +119,17 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <!--aos-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/gsap-latest-beta.min.js"></script>
   <!-- gsap -tool-bar-->
-  <script type="text/javascript"
-    src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
+  <script type="text/javascript" src="https://assets.codepen.io/16327/ScrollTrigger.min.js?v=40"></script>
   <!-- gsap - tool-bar-->
 
-  <script type="text/javascript"
-    src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.1/gsap.min.js"></script>
   <!-- gsap - ScrollTrigger-->
   <script type="text/javascript" src="https://unpkg.com/gsap@3/dist/ScrollTrigger.min.js"></script>
   <!-- gsap - ScrollTrigger-->
@@ -197,43 +186,46 @@
   <div class="blankHM"></div>
 
   <!--intro-->
-  <div class="wrapper element">
-    <div class="intro">
-      <div class="t-hello">hi there! </div>
-    </div>
-    <div class="intro" data-aos="fade-up">
-      <div class="column">
-        <strong>
-          <div class="intro">
-            <h1> Product &nbsp;</h1>
-            <span class="divider1"></span>
-            <h1> Design &nbsp;</h1>
-            <span class="divider1"></span>
-            <h1> Architecture </h1>
-            <span class="divider1"></span>
-            <h1> Art </h1>
-          </div>
-        </strong>
-        <div class="blankHXS"></div>
+  <div class="wrapper">
+    <div class="element">
 
+      <div class="intro">
+        <div class="t-hello">hi there! </div>
+      </div>
+      <div class="intro" data-aos="fade-up">
+        <div class="column">
+          <strong>
+            <div class="intro">
+              <h1> Product &nbsp;</h1>
+              <span class="divider1"></span>
+              <h1> Design &nbsp;</h1>
+              <span class="divider1"></span>
+              <h1> Architecture </h1>
+              <span class="divider1"></span>
+              <h1> Art </h1>
+            </div>
+          </strong>
+          <div class="blankHXS"></div>
+
+        </div>
+      </div>
+      <div class="Grid Grid--full">
+        <div class="Grid-cel colorGrey">
+          <h4>I’m a UI/UX designer with a background in <a href="/architecture/"
+              class="textUnderline colorGrey">architecture</a></h4>
+          <h4>broad skill set developed in a startup environment</h4>
+          <h4>with deep engagement in all stages of the design process</h4>
+          <h4>designed and <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
+              target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h4>
+        </div>
       </div>
     </div>
-    <div class="Grid Grid--full">
-      <div class="Grid-cel colorGrey">
-        <h4>I’m a UI/UX designer with a background in <a href="/architecture/"
-            class="textUnderline colorGrey">architecture</a></h4>
-        <h4>broad skill set developed in a startup environment</h4>
-        <h4>with deep engagement in all stages of the design process</h4>
-        <h4>designed and <a href="https://github.com/vicky-wyq" class="textUnderline colorGrey"
-            target="_blank">implemented</a> this site from scratch, deployed it on AWS S3.</h4>
-      </div>
-    </div>
+
   </div>
   <!--intro-->
 
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
       <div class="Grid-cell">
@@ -246,7 +238,7 @@
       </div>
     </div>
   </div>
-  <div class="blankHS"></div>
+  <div class="blankHXS"></div>
 
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
@@ -279,7 +271,7 @@
               <li>Consider the overall information hierarchy and dependency </li>
 
               <li>Minimize dependence and interdependence between elements whenever possible</li>
-     
+
             </ul>
           </div>
         </div>
@@ -298,7 +290,8 @@
 
             <ul>
               <li>Update and maintain the design system, eliminate redundancy.</li>
-              <li>Ensure that all elements of the user interface are consistent in terms of styling, placement, and function. </li>
+              <li>Ensure that all elements of the user interface are consistent in terms of styling, placement, and
+                function. </li>
             </ul>
           </div>
         </div>
@@ -324,8 +317,7 @@
     </div>
   </div>
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+ 
   <!-- My Journey -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -410,8 +402,7 @@
   </div>
   <!-- My Journey -->
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
+
   <!-- About me -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--1of1 Grid--full Grid--nested">
@@ -568,9 +559,9 @@
   <div class="containerTQ">
     <img src="../image/me.jpg" alt="right">
     <div class="centeredTQ">
-      <h3 class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </h3>
+      <h3 data-aos="fade-up" class="colorAPPOINTABg">Thank You for Visiting&#33; To learn more, head over to my website&#33;</h3>
       <h4 class="displayNonePhone  centerHorz" data-aos="fade-up">
-        &nbsp; <a class="textProject" href="/">Explore my portfolio&#33;</a> </h4>
+        &nbsp; <a class="textProject" href="/">VICKYWANG.ME</a> </h4>
     </div>
   </div>
   <!-- my photo -->
