--- a/architecture/index.html
+++ b/architecture/index.html
@@ -57,8 +57,7 @@
     href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,200;0,300;0,400;0,600;0,700;0,900;1,200;1,300;1,400;1,600;1,700&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Titillium Web', sans-serif; -->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Catamaran:wght@100;200;300;400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!--special font-family: 'Catamaran', sans-serif; -->
   <link
@@ -69,22 +68,19 @@
     href="https://fonts.googleapis.com/css2?family=Hi+Melody&family=Maven+Pro:wght@400;500;600;700;800;900&family=Shadows+Into+Light&display=swap"
     rel="stylesheet">
   <!-- handwriting - shadows into light-->
-  <link
-    href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
+  <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;500;600;700;800;900&display=swap"
     rel="stylesheet">
   <!-- handwriting - font-family: Maven Pro; -->
-  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=La+Belle+Aurore&display=swap" rel="stylesheet">
   <!--handwriting - font-family: La Belle Aurore; -->
 
-  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Caveat:wght@400;500;600;700&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat'; -->
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
-
-  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
 
 
@@ -95,8 +91,7 @@
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
   <!-- crypto js -->
 
-  <script type="text/javascript"
-    src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
   <!--jQuery-->
   <script type="text/javascript" src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -134,14 +129,12 @@
         <ul class="nav-menu">
           <li class="nav-item inactive marginZero"><a href="/" class="nav-link box font300-1080 ">PROJECT</a>
           </li>
-          <li class="nav-item active greenNav marginZero"><a href="/architecture"
-              class="nav-link box">ARCHITECTURE</a>
+          <li class="nav-item active greenNav marginZero"><a href="/architecture" class="nav-link box">ARCHITECTURE</a>
           </li>
           <li class="nav-item inactive marginZero"><a href="/photography"
               class="nav-link box font300-1080 ">PHOTOGRAPHY</a>
           </li>
-          <li class="nav-item inactive marginZero"><a href="/about"
-              class="nav-link box font300-1080 ">ABOUT</a>
+          <li class="nav-item inactive marginZero"><a href="/about" class="nav-link box font300-1080 ">ABOUT</a>
           </li>
         </ul>
       </div>
@@ -156,29 +149,32 @@
   <!-- header -->
   <div class="blankHM"></div>
   <!--intro-->
-  <div class="wrapper element">
+  <div class="wrapper">
+    <div class="element">
 
-    <div class="intro">
-      <div class="t-hello">hi there! </div>
-    </div>
-    <div class="intro" data-aos="fade-up">
-      <strong>
-        <div class="intro">
-          <h1> Architecture &nbsp;</h1>
 
-          <span class="divider1"></span>
-          <h1> Selected academic projects </h1>
+      <div class="intro">
+        <div class="t-hello">hi there! </div>
+      </div>
+      <div class="intro" data-aos="fade-up">
+        <strong>
+          <div class="intro">
+            <h1> Architecture &nbsp;</h1>
+
+            <span class="divider1"></span>
+            <h1> Selected academic projects </h1>
+          </div>
+        </strong>
+
+      </div>
+
+      <div class="Grid Grid--full">
+        <div class="Grid-cell colorGrey">
+          <h3>projects are from my three-year M.Arch program, the main focuses were design theories, methods, and
+            practices</h3>
+          <h3>projects emphasize the major format, spatial, material, tectonic, social, technological,
+            and environmental determinants of building form</h3>
         </div>
-      </strong>
-
-    </div>
-
-    <div class="Grid Grid--full">
-      <div class="Grid-cell colorGrey">
-        <h3>projects are from my three-year M.Arch program</h3>
-        <h3>the main focuses were design theories, methods, and practices</h3>
-        <h3>projects emphasize the major format, spatial, material, tectonic, social, technological,
-          and environmental determinants of building form</h3>
       </div>
     </div>
 
@@ -202,10 +198,10 @@
     </div>
   </div>
   <!-- Selected Projects -->
-  <div class="blankHM"></div>
+  <div class="blankHXS"></div>
   <!-- RECREATION COMMONS-->
   <div class="wrapper">
-    <div class="Grid Grid--full">
+    <div class="Grid Grid--gutters Grid--cols-2">
       <div class="Grid-cell">
         <a href="./recreation_commons/">
           <div class="element">
@@ -227,13 +223,34 @@
             </div>
           </div>
         </a>
+      </div>      
+      <div class="Grid-cell">
+        <div class="element">
+          <div class="elementCard float cardBorder">
+            <img src="./ar_06.jpg" alt="Appointa">
+            <div class="elementInner">
+              <h5>Form finding exercise </h5>
+              <h3>KAPPE HOUSE STUDY</h3>
+              <p class="lineHorizAll"></p>
+              <h6 class=""> <strong>Studio:</strong> &nbsp; THE MAKING OF BUILDINGS
+              </h6>
+              <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2015 | 1 Semester,
+                  1
+                  Unit</span> </h6>
+              <h6> <strong>Project:</strong> &nbsp;Summer Program, CED, UC Berkeley</h6>
+              <h6> <strong>Site:</strong> &nbsp;KAPPE HOUSE </h6>
+              <h6> <strong>Scale:</strong> &nbsp; Total Floor Area: 4,000 sq.ft.</h6>
+
+              <h6> <strong>Instructor:</strong> &nbsp;Yung Ho Chang</h6>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
   <!-- RECREATION COMMONS-->
-  <div class="blankHL"></div>
-  <hr>
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
+
   <!-- recreation commons and narrow stripe -->
 
   <div class="wrapper">
@@ -289,9 +306,8 @@
     </div>
   </div>
   <!-- recreation commons and narrow stripe -->
-  <div class="blankHL"></div>
-  <hr>
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
+
   <!-- Thesis & MANIFOLD GROUND  -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
@@ -341,9 +357,8 @@
 
   </div>
   <!-- Thesis & MANIFOLD GROUND  -->
-  <div class="blankHL"></div>
-  <hr>
-  <div class="blankHL"></div>
+  <div class="blankHM"></div>
+
   <!-- RECOVERY OF RIVER EDGES & Narrow strips  -->
   <div class="wrapper">
     <div class="Grid Grid--gutters Grid--cols-2">
@@ -390,46 +405,17 @@
     </div>
   </div>
   <!-- RECOVERY OF RIVER EDGES & Narrow strips  -->
-  <div class="blankHL"></div>
-  <hr>
-  <div class="blankHL"></div>
-  <!-- KAPPE HOUSE STUDY -->
-  <div class="wrapper">
-    <div class="Grid Grid--full">
-      <div class="Grid-cell">
-        <div class="element">
-          <div class="elementCard float cardBorder">
-            <img src="./ar_06.jpg" alt="Appointa">
-            <div class="elementInner">
-              <h5>Form finding exercise </h5>
-              <h3>KAPPE HOUSE STUDY</h3>
-              <p class="lineHorizAll"></p>
-              <h6 class=""> <strong>Studio:</strong> &nbsp; THE MAKING OF BUILDINGS
-              </h6>
-              <h6><strong>Duration: </strong> <span class="textItalic">&nbsp;Fall 2015 | 1 Semester,
-                  1
-                  Unit</span> </h6>
-              <h6> <strong>Project:</strong> &nbsp;Summer Program, CED, UC Berkeley</h6>
-              <h6> <strong>Site:</strong> &nbsp;KAPPE HOUSE </h6>
-              <h6> <strong>Instructor:</strong> &nbsp;Yung Ho Chang</h6>
-            </div>
-          </div>
-        </div>
 
-      </div>
-    </div>
-  </div>
-  <!-- KAPPE HOUSE STUDY -->
+
   <div class="blankHM"></div>
-  <hr>
-  <div class="blankHM"></div>
-  <div class="Grid Grid--gutters Grid--1of2 Grid--center u-textCenter">
+  <div class="Grid Grid--full u-textCenter">
     <div class="Grid-cell">
-      <h4 data-aos="fade-up">Thank You for Visiting! </h4>
-      <h5>please &nbsp; <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email
-        </a> &nbsp; me for professional projects</h5>
+      <h4 data-aos="fade-up">Thank You for Visiting! please &nbsp; <a class="textUnderline" href="mailto:vickyw.design@gmail.com">email</a> me about professional projects.</h4>
+      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
     </div>
   </div>
+  <div class="blankHL"></div>
+
   <!--body-->
   <div class="blankHM"></div>
   <!--footer-->
