--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
   <!--handwriting - font-family: 'Caveat'; -->
   <link href="https://fonts.googleapis.com/css2?family=Caveat+Brush&display=swap" rel="stylesheet">
   <!--handwriting - font-family: 'Caveat Brush', cursive; -->
+  <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Indie Flower'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Zeyada&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Zeyada'; -->
+  <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+  <!--handwriting font-family: 'Gloria Hallelujah'; -->
+
 
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet">
   <!--font awesome -->
@@ -248,7 +255,7 @@
         <div class="element">
           <div class="elementCard float cardBorder">
             <div class="img__wrap">
-              <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png"/>
+              <img class="img__img" alt="Work Samples" src="./image/Cover_worksample.png" />
               <div class="img__description">
                 <div class="input-field">
                   <input type="password" id="password" placeholder="password">
@@ -364,11 +371,16 @@
     </div>
   </div>
   <!-- projects other -->
-  <div class="blankHM"></div>
 
-  <p class="tTQ centerHorz" data-aos="fade-up">Thanks for your time and have a good day! </p>
-  <p class="textM centerHorz" data-aos="fade-up">More projects coming soon</p>
+  <div class="blankHM"></div>
+  <div class="Grid Grid--full u-textCenter">
+    <div class="Grid-cell">
+      <h4 data-aos="fade-up">Thank You for Visiting&#33; Check back soon for more updates and stay tuned&#33;</h4>
+      <a href="https://vickywang.me" class="textDecor">VICKYWANG.ME</a>
+    </div>
+  </div>
   <div class="blankHL"></div>
+
   <!--back to top-->
   <button id="myBtn" class=" myBtn-1550" title="Go to top">
     <img id="bottom-arrow" class="ArrowHover" src="./icon/arrow-top.svg" alt="back to top">
